# microdata-dataset-collector

./: .test.env  Dockerfile  README.md  pyproject.toml
dataset_collector/: app.py
dataset_collector/adapter/: job_service_client.py
dataset_collector/config/: environment.py  log.py  logging.py
dataset_collector/decrypt/: decrypt_service.py
dataset_collector/exception/: __init__.py
dataset_collector/util/: file_mover.py
tests/unit/adapter/: test_job_service_client.py
tests/unit/decrypt/: test_decrypt_service.py
