[tool.poetry]
name = "dataset-collector"
version = "0.1.0"
description = ""
authors = ["Microdata Developers <microdata-dev@ssb.no>"]

[tool.poetry.dependencies]
python = "^3.10"
json-logging = "^1.3.0"
tomlkit = "^0.11.6"
cryptography = "^39.0.2"
requests = "^2.28.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
pytest-dotenv = "^0.5.2"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
requests-mock = "^1.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
